syntax = "proto3";

option csharp_namespace = "Hpmv";

package Hpmv;


message SessionRequest {
  oneof request {
    LoginRequest login = 2;
    BattleRequest battle = 3;
    InventoryMoveRequest inventory_move = 4;
    ItemUseRequest item_use = 5;
  }
}

message SessionResponse {
  oneof response {
    LoginResponse login = 1;
    BattleResponse battle = 2;
    InventoryMoveResponse inventory_move = 3;
    ItemUseResponse item_use = 4;
  }
  string message = 6;
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  bool successful = 1;
  PlayerInfo player = 2;
  repeated Inventory inventory = 3;
}

message PlayerInfo {
    int32 level = 1;
    int64 experience = 2;
    int64 experience_till_next_level = 3;
    int32 attack = 4;
    int32 hp = 5;
    int32 max_hp = 6;
    int64 money = 7;
}

message InventoryItem {
    int32 id = 1;
    int32 attack = 2;
    int32 hp_restore = 3;

    message MoveCost {
      int32 inventory = 1;
      bool out = 2;
      int64 cost = 3;
    }
    repeated MoveCost move_costs = 4;
}

message Inventory {
  int32 id = 1;
  repeated InventoryItem items = 2;
  int32 total_capacity = 3;
}

message Monster {
  int32 type = 1;
  int32 level = 2;
  int32 attack = 3;
  int32 hp = 4;
}

message MonsterList {
  repeated Monster monsters = 1;
}

message BattleRequest {
  int32 monster_level = 1;
}

message BattleResponse {
  message OneRound {
    int32 self_hp = 1;
    int32 monster_hp = 2;
  }

  repeated OneRound rounds = 1;
  bool victory = 2;
  int32 gained_experience = 3;
  int32 gained_coins = 4;
  PlayerInfo new_info = 5;
}

message InventoryMoveRequest {
  int32 from_inventory = 1;
  int32 to_inventory = 2;
  int32 item_index = 3;
}

message InventoryMoveResponse {
  Inventory from_inventory = 1;
  Inventory to_inventory = 2;
  int64 new_player_money = 3;
}

message ItemUseRequest {
  int32 item_index = 2;
}

message ItemUseResponse {
  int32 new_hp = 1;
  string message = 2;
}
